1.세션 로그인 -> jwt 로그인으로 변경 2.멀티테넌시 DB 설계 수정 3.프로젝트 환경 CLUADE.md에 추가